--- a/back-to-school.html
+++ b/back-to-school.html
@@ -50,7 +50,7 @@
 <h1>GRLSWIRL</h1>
             
 <img class="girl" src="images/grlswirl.png" alt="">
-<!-- Deze code heb ik door chat GPT kunnen maken  -->
+<!-- Deze code heb ik door chat GPT kunnen maken : https://chatgpt.com/c/2feceae3-6dd6-4cf3-8ba3-0d833a3b333d  -->
 <section>
     <h2 hidden>zumiez website.</h2>
     <form action="/">
