--- a/index.html
+++ b/index.html
@@ -38,15 +38,11 @@
             <a href="index.html"><img src="images/Schermafbeelding_2024-09-04_om_22.21.16-removebg-preview.png" alt="http://127.0.0.1:5500/zumiez/index.html"></a>
         </aside>
 
-
+        <!-- Deze code heb ik door chat GPT kunnen maken : https://chatgpt.com/c/2feceae3-6dd6-4cf3-8ba3-0d833a3b333d  -->
             <input type="text" placeholder="What are you looking for?">
     </header>
 
-    <main>
-        <audio controls>
-            <source src="sound/audio-rocklobster.mp3" type="audio/mpeg">
-          Your browser does not support the audio element.
-          </audio> 
+    <main> 
         <h1 hidden>zumiez website.</h1>
 
         <section id="catagories">
