--- a/back-to-school.html
+++ b/back-to-school.html
@@ -248,7 +248,7 @@
             <form action="action_page.php">
             <label for="email"></label>
             <input type="text" id="email" placeholder="Enter Email" name="email" required>  
-            <button class="su">
+            <button class="confetti-button">
                 SIGN UP
             </button>
             </form>
@@ -266,5 +266,6 @@
 
     </footer>
     <script src="index.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
