--- a/back-to-school.html
+++ b/back-to-school.html
@@ -9,7 +9,8 @@
 <body>
 
     <img class="hi" src="images/balk.png" alt="">
-
+    <button id="toggle-halloween-mode">Toggle Halloween Theme</button>
+    
     <header>
         <aside>
             <nav aria-expanded="false">
