--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img class="hi" src="images/balk.png" alt="">
+    <button id="toggle-halloween-mode">Toggle Halloween Theme</button>
     
     <header>
        
