--- a/back-to-school.html
+++ b/back-to-school.html
@@ -9,7 +9,6 @@
 <body>
 
     <img class="hi" src="images/balk.png" alt="">
-    <button id="toggle-halloween-mode">Toggle Halloween Theme</button>
     
     <header>
         <aside>
@@ -42,6 +41,7 @@
     </header>
 
     <main>
+        <button class="toggle-halloween-mode">Light & Dark Mode</button>       
 <section>
     <h3>GET IT NOW</h3>
     <p>Unfortunately, there are no stores nearby that offer pickup. You may want to try a different location.</p>
